freest/test/prog/invalid/scoping/MultipleDeclsTypeData/MultipleDeclsTypeData.fst
module MultipleDeclsTypeData where

type Foo = Int

data Foo = Bar Int | Baz
